<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.BasicResultFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:id="@+id/module_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_margin="4dp"
                android:background="@drawable/vote_bg"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/no_of_reg_voters"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="1dp">

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/registered_votes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/edit_bg"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="1dp">

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:background="@drawable/vote_bg"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/no_of_accredited_voters"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="1dp">

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/accredited_voters"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/edit_bg"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="1dp">

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:background="@drawable/vote_bg"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/no_of_cast_votes"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="1dp">

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/cast_votes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/edit_bg"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="1dp">

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_margin="4dp"
                android:layout_weight="2"
                android:background="@drawable/vote_bg"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/no_of_invalid_voters"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="1dp">

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/invalid_votes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/edit_bg"
                        android:inputType="number"
                        android:textAlignment="center"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="1dp">

                </FrameLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/motion_btns"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <Button
                    android:id="@+id/previous_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:background="@drawable/btn_primary"
                    android:drawableStart="@drawable/ic_keyboard_arrow_left_white_24dp"
                    android:drawableLeft="@drawable/ic_keyboard_arrow_left_white_24dp"
                    android:padding="8dp"
                    android:text="Previous"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/next_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/btn_primary"
                    android:drawableRight="@drawable/ic_keyboard_arrow_right_white_24dp"
                    android:padding="8dp"
                    android:text="Next"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>